feat: adjust ui

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
 @import url('https://fonts.cdnfonts.com/css/chillax');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
-
 
 @tailwind base;
 @tailwind components;
@@ -28,6 +26,13 @@
 @font-face {
   font-family: 'SpaceGrotesk';
   src: url('./assets/fonts/SpaceGrotesk-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'DMSans';
+  src: url('./assets/fonts/DMSans-VariableFont_opsz\,wght.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
