--- a/src/components/home1/ClientLogos.css
+++ b/src/components/home1/ClientLogos.css
@@ -1,14 +1,16 @@
-animate-img {
+.animate-img {
     position: absolute;
-    left: 100%;
+    left: 50%;
+    top: 50%;
+    translate: 0 -50%;
     animation-name: scrollLeft;
     animation-duration: 3;
-    animation-timing-function: infinite;
-    background-color: red;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
 }
 
 @keyframes scrollLeft {
     to{
-        left: -200px
+        left: -112px;
     }
 }
